<resources>
    <string name="app_name">SCG Express</string>
    <string name="go">Go</string>
    <string name="greeting">Hello World!</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="open_drawer">Open drawer</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="close_drawer">Close drawer</string>
    <string name="scan_qr_code_to_login">Scan QR code to login</string>
    <string name="there_is_on_internet_connection">There is no internet connection</string>
    <string name="user">User</string>
    <string name="warning">Warning</string>
    <string name="master_data_update_state_init">เริ่มต้นการอัปเดตข้อมูล Master</string>
    <string name="master_data_update_state_check_version">กำลังตรวจสอบเวอร์ชันของ Master Data</string>
    <string name="master_data_update_state_download_file">กำลัง download ข้อมูล Master</string>
    <string name="master_data_update_state_convert_object">กำลังแปลงข้อมูล</string>
    <string name="master_data_update_state_truncate_db">ทำการล้างข้อมูลเก่า</string>
    <string name="master_data_update_state_read_file">อ่านไฟล์ Master %1$s\%%</string>
    <string name="master_data_update_state_insert_db">เขียนข้อมูล Master ใหม่ลงระบบ\n%1$s %2$s records</string>
    <string name="master_data_update_state_update_version">อัปเดตเสร็จสิ้น กำลังบันทึก</string>
    <string name="master_data_update_state_up_to_date">Master Data is up-to-date\nข้อมูลเป็นเวอร์ชันปัจจุบันแล้ว</string>
    <string name="emergency_master_data_update">propagate emergency master data update\nจำเป็นต้องทำการอัปเดท master data</string>
    <string name="btn_master_data_update">อัปเดทข้อมูล master data ตอนนี้เลย</string>
    <string name="btn_master_data_postpone_short">เลื่อน 15 นาที</string>
    <string name="btn_master_data_postpone_long">เลื่อน 30 นาที</string>
    <string name="sync_msg_before_logout">กำลัง sync ข้อมูลก่อนออกจากระบบ กรุณารอสักครู่...</string>
    <string name="logout_confirm_msg">ต้องการออกจากระบบ?</string>
    <string name="logout_confirm_msg_btn_ok">ออกจากระบบ</string>
    <string name="logout_confirm_msg_btn_cancel">ยกเลิก</string>
    <string name="logout_sync_pending_done">sync ข้อมูลครบแล้ว, ต้องการออกจากระบบกรุณา logout อีกรอบ</string>
    <string name="dialog_submit_confirm_title">จบการทำงาน</string>
    <string name="dialog_submit_confirm_message">ยืนยันการจบการทำงาน</string>
    <string name="dialog_submit_confirm_ok">จบการทำงาน</string>
    <string name="dialog_submit_confirm_cancel">ยกเลิก</string>
    <string name="signer">Signer</string>
    <string name="sign_here">Sign here</string>
    <string name="clear">CLEAR</string>
    <string name="dialog_app_version_title">เกิดข้อผิดพลาด</string>
    <string name="dialog_app_version_message">แอพพลิเคชันไม่ใช่เวอร์ชันล่าสุด กรุณาอัปเดตก่อนใช้งาน</string>
    <string name="dialog_app_version_ok">อัปเดต</string>
    <string name="services_type">Services type</string>
    <string name="pickup_task_list_stat">Normal %1$d / Chiled %2$d / Frozen %3$d</string>
    <string name="pickup_title_shipper_code">%1$s</string>
    <string name="pickup_title_amount_to_total">%1$d/%2$d</string>
    <string name="pickup_title_amount_to_total_none">%1$d</string>
    <string name="pickup_title_count_from_booking">From Booking</string>
    <string name="pickup_title_count_from_new_tracking">New Tracking</string>
    <string name="services">Services</string>
    <string name="sizes">Sizes</string>
    <string name="remember">Remember</string>
    <string name="memory">Memory</string>
    <string name="zip_code">รหัสไปรษณีย์</string>
    <string name="register">ลงทะเบียน</string>
    <string name="summary">สรุป</string>
    <string name="tracking_code">Tracking</string>
    <string name="scan_customer_qr_code_title">Scan Shipper Code</string>
    <string name="scan_customer_qr_code">Shipper code / Mobile number (Sender)</string>
    <string name="dialog_pickup_cod_not_found_title">เกิดข้อผิดพลาด</string>
    <string name="dialog_pickup_cod_not_found_message">ไม่พบข้อมูล COD Fee ในระบบ</string>
    <string name="dialog_pickup_cod_not_found_ok">ตกลง</string>
    <string name="dialog_pickup_not_allow_cod_title">เกิดข้อผิดพลาด</string>
    <string name="dialog_pickup_not_allow_cod_message">ยังไม่ได้เปิดให้บริการ COD สำหรับลูกค้ารายนี้</string>
    <string name="dialog_pickup_not_allow_cod_ok">ตกลง</string>
    <string name="dialog_remote_postalcode_selector">กรุณาเลือกพื้นที่ปลายทาง</string>
    <string name="dialog_remote_postalcode_alert">! เตือนพื้นที่ห่างไกล</string>
    <string name="dialog_remote_postalcode_desc">รหัสไปรษณีย์ที่ท่านเลือก อยู่ในพื้นที่ห่างไกล ใช้เวลาจัดส่งภายใน 2–4 วัน</string>
    <string name="dialog_remote_postalcode_extra_desc">รหัสไปรษณีย์ที่ท่านเลือก อยู่ในพื้นที่ห่างไกล ใช้เวลาจัดส่งภายใน 2–4 วัน และมีค่าบริการเพิ่มเติม 200 บาท ต่อกล่อง</string>
    <string name="dialog_remote_postalcode_ok">ยอมรับ</string>
    <string name="dialog_remote_postalcode_cancel">ยกเลิก</string>
    <string name="dialog_confirm_extra_tracking">Confirm add new tracking no. %1$s</string>
    <string name="dialog_confirm_leave_pickup_main">Do you want to leave this page?\nIt will delete all scanned tracking.</string>
    <string name="dialog_confirm_leave_ok">Leave</string>
    <string name="dialog_confirm_leave_cancel">Cancel</string>
    <string name="dialog_confirm_extra_tracking_ok">Confirm</string>
    <string name="dialog_confirm_extra_tracking_cancel">Cancel</string>
    <string name="dialog_alert_tracking_is_already_exist">Tracking %1$s is already registered.</string>
    <string name="dialog_alert_tracking_wrong_format">%1$s is not tracking format</string>
    <string name="dialog_alert_tracking_cod_not_allow">COD Tracking is not allow for this Organization</string>
    <string name="list_title_tracking_pending">รอรับ</string>
    <string name="list_title_tracking_scanned">รับแล้ว</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="logout">Logout</string>
    <string name="this_is_subtitle">This is subtitle</string>
    <string name="this_is_title">This is title</string>
    <string name="pickup">Pick up</string>
    <string name="delivery">Delivery</string>
    <string name="sale_driver_report">Sale driver report</string>
    <string name="sd_report">SD Report</string>
    <string name="line_haul">Line haul</string>
    <string name="line">Line</string>
    <string name="date_picker">Date Picker</string>
    <string name="notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="scan_ofd">Scan OFD</string>
    <string name="ofd">OFD</string>
    <string name="booking">Booking</string>
    <string name="show_all">Show All</string>
    <string name="sent">Sent</string>
    <string name="retention">Retention</string>
    <string name="can_not_sent">Can\'t sent</string>
    <string name="reset_status">Reset status</string>
    <string name="note">Note</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="cancel">ยกเลิก</string>
    <string name="photo_select_method_title">Select Action</string>
    <string name="photo_select_method_gallery">Gallery</string>
    <string name="photo_select_method_camera">Camera</string>
    <string name="pickup_total">รวมทั้งหมด</string>
    <string name="today">TODAY</string>
    <string name="see_details">ดูรายละเอียด</string>
    <string name="reason">Reason</string>
    <string name="id_parcel">ID Parcel</string>
    <string name="id_manifest_sheet">ID Manifest Sheet</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="ofd_manifest">OFD Manifest</string>
    <string name="new_booking">New Booking</string>
    <string name="new_bookings">New Bookings</string>
    <string name="new_ofd">New</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Incomplete</string>
    <string name="remain_pickup">Remains Pickup</string>
    <string name="remain_ofd">Remains OFD</string>
    <string name="picked">Picked</string>
    <string name="ret">Ret</string>
    <string name="del">Del</string>
    <string name="yes">ใช่</string>
    <string name="delete_tracking">ลบข้อมูล</string>
    <string name="registered">Tracking registered</string>
    <string name="_0">0</string>
    <string name="scan_out_tracking_no">Scan Out - Tracking NO.</string>
    <string name="confirm">ยืนยัน</string>
    <string name="in_progress">In progress</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="cod_thb">COD (THB)</string>
    <string name="recipient">Recipient</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="remark">Remark</string>
    <string name="photo">รูปถ่าย</string>
    <string name="sender">Sender</string>
    <string name="status">Status</string>
    <string name="unknown">Unknown</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_id_with_colon">Booking ID : </string>
    <string name="date_time_picking_up">Date - Time Picking up</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="delivery_fee">ค่าขนส่ง</string>
    <string name="service_charge">Service charge</string>
    <string name="cod_fee">ค่าบริการ COD</string>
    <string name="total">รวมทั้งหมด</string>
    <string name="branch">Branch</string>
    <string name="driver">Driver</string>
    <string name="vehicle">Vehicle</string>
    <string name="create">Create</string>
    <string name="scan_in_tracking_no">Scan In - Tracking NO.</string>
    <string name="tracking">Tracking</string>
    <string name="cod">COD</string>
    <string name="oreder_date">Order Date</string>
    <string name="cod_amount">COD Amount</string>
    <string name="delivery_cost">ค่าขนส่ง</string>
    <string name="carton_price">ค่ากล่อง</string>
    <string name="photo_sender">รูปถ่ายผู้ส่ง</string>
    <string name="photo_recipient">รูปถ่ายผู้รับ</string>
    <string name="continue_">Continue</string>
    <string name="payment_method">วิธีชำระเงิน</string>
    <string name="sync_now">ซิงค์ข้อมูล</string>
    <string name="sync_success">ซิงค์ข้อมูลสำเร็จ</string>
    <string name="sync_fail">ไม่สามารถซิงค์ข้อมูลได้</string>
    <string name="waiting_for_sync">มีข้อมูลที่ยังไม่ได้ซิงค์</string>
    <string name="list_entry_no_data">ไม่มีข้อมูล</string>
    <string name="submit_report">Submit and Logout</string>
    <string name="customer">ลูกค้า</string>
    <string name="choose_sizes">เลือกขนาด</string>
    <string name="choose_carton">ขายกล่อง</string>
    <string name="choose_carton_no_select_type">กรุณาเลือก Service และ Size ก่อน</string>
    <string name="sentence_pickup_summary_are_you_sure_you_want_to_delete_this_tracking">คุณแน่ใจที่จะลบไอเทมนี้ใช่หรือไม่</string>
    <string name="currency_placeholder">-</string>
    <string name="dialog_alert_location_out_of_service">This location is out of service.</string>
    <string name="sentence_booking_details_error_invalid_customer_code">เกิดข้อผิดพลาด ไม่พบ Customer code ในระบบ</string>
    <string name="sentence_delivery_tracking_not_found">ไม่พบ Tracking No. ใน OFD ใบนี้</string>
    <string name="carton_fee">ค่ากล่อง</string>
    <string name="size">Size</string>
    <string name="service">Service</string>
    <string name="change_the_delivery_time_to">Change the delivery time to</string>
    <string name="delivery_date">Delivery date</string>
    <string name="delivery_time">Delivery time</string>
</resources>