<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTrackingTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/tracking_number"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="@dimen/text_normal"
            app:autoSizeTextType="uniform"/>

    <View
            android:layout_width="@dimen/divider"
            android:layout_height="match_parent"
            android:background="@color/grayLight"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIdParcelTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/id_parcel"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="@dimen/text_normal"
            app:autoSizeTextType="uniform"/>

    <View
            android:layout_width="@dimen/divider"
            android:layout_height="match_parent"
            android:background="@color/grayLight"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIdStatusTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="@dimen/text_normal"
            app:autoSizeTextType="uniform"/>

    <View
            android:layout_width="@dimen/divider"
            android:layout_height="match_parent"
            android:background="@color/grayLight"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookingIdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/booking_id"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="@dimen/text_normal"
            app:autoSizeTextType="uniform"/>

    <View
            android:layout_width="@dimen/divider"
            android:layout_height="match_parent"
            android:background="@color/grayLight"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvIdManifestSheetTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/id_manifest_sheet"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="@dimen/text_normal"
            app:autoSizeTextType="uniform"/>

    <!--</LinearLayout>-->

</LinearLayout>