<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.delivery.ofd.create.OfdCreateFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBranch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_large"
            android:hint="@string/branch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/etBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text"
                tools:ignore="LabelFor,TextFields"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDriver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_large"
            android:layout_marginStart="@dimen/grid_large"
            android:layout_marginTop="@dimen/grid_normal"
            android:hint="@string/driver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilBranch">

        <EditText
                android:id="@+id/etDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text"
                tools:ignore="LabelFor,TextFields"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_large"
            android:layout_marginStart="@dimen/grid_large"
            android:layout_marginTop="@dimen/grid_normal"
            android:hint="@string/vehicle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDriver">

        <EditText
                android:id="@+id/etVehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="LabelFor,TextFields"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_normal"
            android:backgroundTint="@color/btn_accent_tint"
            android:text="@string/create"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>