<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_large"
            android:layout_marginTop="@dimen/grid_xlarge"
            android:layout_marginEnd="@dimen/grid_xlarge"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reset_status"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/grid_large"
            android:layout_marginEnd="@dimen/grid_xlarge"
            android:layout_marginBottom="@dimen/grid_large"
            app:layout_constraintBottom_toTopOf="@+id/edtNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_large"
            android:layout_marginTop="@dimen/grid_xlarge"
            android:layout_marginEnd="@dimen/grid_xlarge"
            android:hint="@string/note"
            app:layout_constraintBottom_toTopOf="@+id/btnOk"/>

    <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/grid_xlarge"
            android:layout_marginStart="@dimen/grid_large"
            android:paddingTop="@dimen/grid_xlarge"
            android:paddingEnd="@dimen/grid_xlarge"
            android:paddingBottom="@dimen/grid_large"
            android:layout_marginEnd="@dimen/grid_normal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/grid_large"
            android:paddingTop="@dimen/grid_xlarge"
            android:layout_marginEnd="@dimen/grid_large"
            android:paddingBottom="@dimen/grid_large"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel_upper"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"/>
</androidx.constraintlayout.widget.ConstraintLayout>